// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
        for="_r_0_"
      >
        <div
          class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u31 uv_toi52u5j uv_toi52u5v"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
        />
        <div
          class="uv_adn1w20 uv_adn1w21 uv_adn1w23 uv_adn1w25"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            class="uv_adn1w28"
            id="_r_0_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
        for="_r_4_"
      >
        <div
          class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u31 uv_toi52u5j uv_toi52u5v"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
        />
        <div
          class="uv_adn1w20 uv_adn1w21 uv_adn1w23 uv_adn1w25"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="uv_adn1w28"
            id="_r_4_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="true"
        class="uv_adn1w29 uv_adn1w2b uv_adn1w2d"
        for="_r_2_"
      >
        <div
          class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u31 uv_toi52u5j uv_toi52u5v"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
        />
        <div
          class="uv_adn1w20 uv_adn1w22 uv_adn1w23 uv_adn1w25"
        >
          <input
            aria-disabled="true"
            aria-invalid="false"
            class="uv_adn1w28"
            disabled=""
            id="_r_2_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly with label and checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_adn1w29 uv_adn1w2a uv_adn1w2d"
        for="_r_6_"
      >
        <div
          class="uv_toi52u0 uv_toi52u1j uv_toi52u2d uv_toi52u31 uv_toi52u5j uv_toi52u5v"
          style="--uv_4k0ekn0: auto; --uv_4k0ekn1: none; --uv_4k0ekn2: auto;"
        >
          <div
            class="uv_x6hyh50 uv_x6hyh5d uv_x6hyh52j"
            style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
          >
            <span
              class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
              for="_r_6_"
            >
              test
            </span>
          </div>
        </div>
        <div
          class="uv_adn1w20 uv_adn1w21 uv_adn1w23 uv_adn1w25"
        >
          <input
            aria-disabled="false"
            aria-invalid="false"
            checked=""
            class="uv_adn1w28"
            id="_r_6_"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;
